********************************************************
CHANGELOG
********************************************************

IMPORTANT: "TAILS Candy" is for use with a TAILS persistent volume only, i.e.
*********  when running TAILS from a USB-stick, SSD card or virtual machine with persistence support.		


September 13th 2016
*******************

- Added OnionCat and Yubikey Personalization GUI installers

September 10th 2016
*******************

- Modifications for TAILS 2.5 after a long period of no maintenance.

January 31st 2016
*****************

- Removed SSH upgrade script; Already on SSH 6.7 in Debian Jessie

December 16th 2015
******************

- Added AESCrypt 3.10, Jitsi 2.8 and Mumble Client 1.2.3

December 12th 2015
******************

- Added Paranoia Text & File Encryption 12R1C

December 11th 2015
******************

- Added Gostcrypt 1.0 and TrueCrypt 7.2

December 8th 2015
******************

- Temporarily removed OnionShare until it works with TAILS again
- Bugfixes

November 27th 2015
******************

- Updated Academic Signature to version v53

November 16th 2015
******************

- Added Horcrux backup/restore script

November 11th 2015
******************

- Added AIDE 0.16 and Zulucrypt 4.77 packages

November 7th 2015
*****************

- Added Rootkit Hunter 1.4.2 package

November 5th 2015
*****************

- Signature verification of package downloads and functional verification on TAILS 1.7 

October 30th 2015  INITIAL RELEASE 0.1a
*****************  ********************

"TAILS Candy" provides a set of on-demand installation/update scripts for
OpenSSH, VLC, TorChat, OnionMail, OnionShare, Tahoe LAFS, Pond, Martus,
Academic Signature, Tomb, Armory, Dropbox, SilentEye, TeamViewer, PyBitmessage,
Shamir's Secret Sharing Scheme, Tor Messenger (beta), Armory, Rootkit Hunter,
AIDE, Paranoia File & Text Encryption, Jitsi, AESCrypt, Mumble, Horcrux,
GostCrypt, TrueCrypt, Veracrypt and Zulucrypt.

Additional features:
